[gd_scene load_steps=3 format=3 uid="uid://colj5pegdwu86"]

[ext_resource type="Script" path="res://hud/pause_menu.gd" id="1_b88rm"]
[ext_resource type="Script" path="res://hud/ButtonWithSound.gd" id="2_af0uw"]

[node name="PauseMenu" type="ColorRect" node_paths=PackedStringArray("button_resume", "button_restart_level", "button_menu")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.713726)
script = ExtResource("1_b88rm")
button_resume = NodePath("MarginContainer/VBoxContainer/Buttons/button_resume")
button_restart_level = NodePath("MarginContainer/VBoxContainer/Buttons/button_restart")
button_menu = NodePath("MarginContainer/VBoxContainer/Buttons/button_menu")
main_menu_scene = "res://main/main_menu.tscn"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelTitle"
theme_override_font_sizes/font_size = 64
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 64
alignment = 1

[node name="button_resume" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Resume"
script = ExtResource("2_af0uw")

[node name="button_restart" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Restart Level"
script = ExtResource("2_af0uw")

[node name="button_menu" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Return to main menu"
script = ExtResource("2_af0uw")
